--- a/file3.html
+++ b/file3.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script3.js"></script>
-    <title>Document</title>
+    <title>differences</title>
 </head>
 <body>
-   <h1>diffrencess</h1>
+   <h1>differences</h1>
    <h2>NOT Define and UNDEFINE</h2> 
 </body>
 </html>
