--- a/file1.html
+++ b/file1.html
@@ -5,12 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linking js file</title>
+    <style>
+        *{
+            color: white;
+        }
+        body{
+            background-color: rgb(8, 87, 124);
+        }
+        p{
+            color: whitesmoke;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>JS</h1>
+    <h1 style="color: rgb(7, 7, 175); background-color: rgba(218, 206, 206, 0.829);text-align: center;">Connecting JavaScript with Html file</h1>
+
     <script src="script1.js"></script>
     <script>
         console.log(x);
     </script>
+    <h3>JavaScript</h3>
+    <p>
+        JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information 
+        for you to look at — displaying timely content updates, interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc
+    </p>
+    <br>
+    <h2>Process...</h2>
+    <p>
+        HTML script src Attribute <br>
+        If you want to run the same JavaScript on several pages in a web site, you should create an external JavaScript file, instead of writing the same script over and over again. Save the script file with a .js extension, and then refer to it using the src attribute in the script tag.
+        
+    </p>
+    <hr>
+    <br>
+    <pre>
+        Name: Ayush Gautam
+        Roll no: 2006155
+        Branch: CSE
+        Question no: 1
+    </pre>
+
 </body>
 </html>
