--- a/file2.html
+++ b/file2.html
@@ -6,8 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script2.js"></script>
     <title>Scopes of variables in JS</title>
+    <style>
+        body{
+            background-color: aquamarine;
+        }
+        div{
+            border: solid 3px rgb(246, 247, 250);
+            background-color: slategray;
+        }
+        pre{
+            background-color: tan;
+            margin-right: 60%;
+            font-size: 18px;
+        }
+        
+    </style>
 </head>
 <body>
-    <h1>JS scope</h1>
+    <div>
+    <h1 style="text-align: center; color: tomato;">JavaScript Scope</h1></div>
+    <h3>There are 2 type of scope in javascript</h3>
+    <ul>
+        <li>Global scope</li>
+        <li>Function scope</li>
+    </ul>
+<hr>
+    <dl>
+        <dt>Global scope</dt>
+        <dd>Variables declared Globally (outside any function) have Global Scope. <br>
+             Global variables can be accessed from anywhere in a JavaScript program.</dd>
+             <br>
+        <dt>Function Scope</dt>
+        <dd>
+            JavaScript has function scope: Each function creates a new scope. <br>
+            Variables defined inside a function are not accessible (visible) from outside the function.
+        </dd>
+    </dl>
+    <br>
+    <h3>For more detail See Console in web browser</h3>
+    <hr style="height: 2px;">
+    
+    <br>
+    <pre>
+        Name: Ayush Gautam
+        Roll no: 2006155
+        Branch: CSE
+        Question no: 2
+    </pre>
+
 </body>
 </html>
