--- a/file3.html
+++ b/file3.html
@@ -5,10 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script3.js"></script>
-    <title>differences</title>
+    <title>Difference</title>
+    <style>
+        body{
+            background-color: rgba(216, 245, 179, 0.801);
+        }
+        h1{
+            color: rgb(204, 14, 14);
+        }
+    </style>
 </head>
-<body>
-   <h1>differences</h1>
-   <h2>NOT Define and UNDEFINE</h2> 
+<body >
+   <h1>Difference between Undefine and Not Define</h1>
+   <h2>Undefine:</h2> 
+   <p>It is a JavaScript keyword that has a special meaning. Everything which gets a space in memory will contain undefined until we assign a value to that memory space</p>
+   <h2>Not Define:</h2>
+   <p>In JavaScript, it is one of the reference errors that JavaScript will throw when someone accesses the variable which is not inside the memory heap.</p>
+   <hr> 
+   <br>
+   <pre>
+    Name: Ayush Gautam
+    Roll no: 2006155
+    Branch: CSE
+    Question no: 3
+</pre>
+
 </body>
 </html>
