--- a/jSAssignment.html
+++ b/jSAssignment.html
@@ -32,6 +32,9 @@
         Object property stores a literal value and method represents function. <br>
         An object can be created using object literal or object constructor syntax <br>
     </p>
+    <div>
+        <p>After opening console... <b>Please refresh web page one time then it give better result</b></p>
+    </div>
     <h3>Rel life example of object</h3>
     <p>A car is an object,<br>
        A car has properties like weight and color, and methods like start and stop
